--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -17,7 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
+#add the .env file to gitignore
+.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
